--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "canvas": "^2.8.0",
-    "node-canvas-with-twemoji": "^0.1.6"
+    "node-canvas-with-twemoji": "^0.1.6",
+    "sharp": "^0.29.3"
   }
 }
